--- a/configs/web/index.html
+++ b/configs/web/index.html
@@ -20,11 +20,15 @@
 
   h1 {
     color: white;
-    text-shadow: 1px 1px 1px #20AD90;
     font-size: 5rem;
     letter-spacing: -2px;
     font-weight: 900;
     text-transform: uppercase;
+    transition: 0.5s;
+  }
+
+  h1:hover {
+    text-shadow:5px 5px 0 #20AD90,-5px -5px 0 #FFE44C;
   }
 
   nav {
