--- a/configs/web/index.html
+++ b/configs/web/index.html
@@ -53,8 +53,8 @@
     <nav>
       <a href="https://github.com/instamotion/im-components">Code</a>
       <a href="/storybook">Components</a>
-      <a href="#">Style guide</a>
-      <a href="#">Confluence</a>
+      <a href="https://www.figma.com/file/IbdkV9yRPXWhCPRpwCfhYr/InstaMotion?node-id=0%3A1">Style guide</a>
+      <a href="https://instamotion.atlassian.net/wiki/spaces/imdev/pages/766705680/RFC+the+future+architecture+for+the+Erlking">Confluence</a>
     </nav>
   </main>
 </body>
